@@ -66,6 +66,9 @@ public class MRTDSODSignerTest extends ModulesTestCase {
     private static final int WORKER1C = 7902;
     
     private static final int WORKER1D = 7903;
+    
+    /** Worker7904: SHA256WithECDSA, DODATAGROUPHASHING=true */
+    private static final int WORKER5 = 7904;
 
     /** Worker7904: SHA256WithECDSA, DODATAGROUPHASHING=true */
     // Does not work currently, SignServer 3.2.0, 2011-06-28, du to that the response via remote EJB contains a "Certificate" and Java does not support 
@@ -132,17 +135,17 @@ public class MRTDSODSignerTest extends ModulesTestCase {
         workerSession.setWorkerProperty(WORKER4, "KEYSTOREPASSWORD", "foo123");
 
         // WORKER5 uses a P12 keystore and ECC
-//        workerSession.setWorkerProperty(WORKER5, "KEYSTOREPATH",
-//                getSignServerHome().getAbsolutePath()
-//                + File.separator + "src" + File.separator + "test"
-//                + File.separator + "demodsecc1.p12");
-//        workerSession.setWorkerProperty(WORKER5, "KEYSTOREPASSWORD", "foo123");
+        workerSession.setWorkerProperty(WORKER5, "KEYSTOREPATH",
+                getSignServerHome().getAbsolutePath()
+                + File.separator + "src" + File.separator + "test"
+                + File.separator + "demodsecc1.p12");
+        workerSession.setWorkerProperty(WORKER5, "KEYSTOREPASSWORD", "foo123");
 
         workerSession.reloadConfiguration(WORKER1);
         workerSession.reloadConfiguration(WORKER2);
         workerSession.reloadConfiguration(WORKER3);
         workerSession.reloadConfiguration(WORKER4);
-        //workerSession.reloadConfiguration(WORKER5);
+        workerSession.reloadConfiguration(WORKER5);
         workerSession.reloadConfiguration(WORKER1B);
         workerSession.reloadConfiguration(WORKER1C);
         workerSession.reloadConfiguration(WORKER1D);
@@ -175,7 +178,7 @@ public class MRTDSODSignerTest extends ModulesTestCase {
         signHelper(WORKER2, 14, dataGroups3, false, "SHA512", "SHA512withRSA");
         
         // DG1, DG2 with the other worker which uses SHA256 and SHA256withECDSA
-        //signHelper(WORKER5, 15, dataGroups2, false, "SHA256", "SHA256withECDSA");
+        signHelper(WORKER5, 15, dataGroups2, false, "SHA256", "SHA256withECDSA");
     }
 
     /**
